Added centerline to cv2 output

--- a/cone_detection/conedetection_static.ipynb
+++ b/cone_detection/conedetection_static.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "-1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,19 +32,6 @@
     "\n",
     "#_____imgHSV\n",
     "imgHSV = cv2.cvtColor(imgOriginal, cv2.COLOR_BGR2HSV)\n",
-    "\n",
-    "#_____imgThreshLow\n",
-    "#lowerRed = np.array([0, 135, 135])\n",
-    "#upperRed = np.array([15, 255, 255])\n",
-    "#imgThreshLow = cv2.inRange(imgHSV, lowerRed, upperRed)\n",
-    "\n",
-    "#_____imgThreshHigh\n",
-    "#lowerRed = np.array([159, 135, 135])\n",
-    "#upperRed = np.array([179, 255, 255])\n",
-    "#imgThreshHigh = cv2.inRange(imgHSV, lowerRed, upperRed)\n",
-    "\n",
-    "#_____imgThresh\n",
-    "#imgThresh = cv2.add(imgThreshLow, imgThreshHigh)\n",
     "\n",
     "#_____purpleThrshold\n",
     "upperPurple = np.array([135, 225, 96])\n",
@@ -141,11 +128,11 @@
     "\n",
     "#imgTrafficConesWithOverlapsRemoved\n",
     "imgTrafficConesWithOverlapsRemoved = imgOriginal.copy()\n",
-    "#cv2.drawContours(imgTrafficConesWithOverlapsRemoved, cones, -1, (255, 255, 255), 2)\n",
+    "cv2.drawContours(imgTrafficConesWithOverlapsRemoved, cones, -1, (255, 255, 255), 2)\n",
     "\n",
     "for rect in bounding_Rects:\n",
     "    cv2.rectangle(imgTrafficConesWithOverlapsRemoved, (rect[0], rect[1]), (rect[0]+rect[2], rect[1]+rect[3]), (1, 255, 1), 2)\n",
-    "\n",
+    "    cv2.line(imgTrafficConesWithOverlapsRemoved, (round(rect[0]+rect[2]-rect[2]/2), rect[1]), (round(rect[0]+rect[2]-rect[2]/2), rect[1]+rect[3]), (255,0,0), 5)\n",
     "#Image scaling\n",
     "#imgOriginalSmall = cv2.resize(imgOriginal, (0, 0), fx=0.5, fy=0.5)\n",
     "#imgHSVSmall = cv2.resize(imgHSV, (0, 0), fx=0.5, fy=0.5)\n",
